# CNPJ-QA-Training

./: .coveragerc  .gitignore  01.Guia_cnpj_qa.md  02.Exercicios_cnpj.md  03.Gabarito_exercicios_CNPJ.md  04.Plano_Hibrido_6_Semanas.md  05.Casos_de_Teste_Realistas.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  REESTRUTURACAO.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci-cd.yml
cnpj_validator/: __init__.py  cnpj_validator.py
cnpj_validator/validators/: alphanumeric_validator.py  numeric_validator.py
docs/: JORNADA-APRENDIZADO.md  README.md
docs/archive/: NAVEGACAO.md  README_OLD_PROJETO.md  README_OLD_TRAINING.md
docs/arquitetura/: 01-visao-geral.md
docs/guides/: cnpj-alfanumerico-2026.md  glossario-referencias.md  guia-implementacao.md
docs/testing/: README_OLD_SHIFT_LEFT.md  casos-teste-realistas.md  shift-left-testing.md  zephyr-integration.md
docs/testing/shift-left-legados/: README.md
docs/testing/shift-left-legados/01-fundamentos/: 01-o-que-sao-sistemas-legados.md  02-desafios-de-testar-legados.md  03-shift-left-em-contexto-legado.md  04-estrategias-de-migracao.md
docs/testing/shift-left-legados/02-tecnicas/: 01-characterization-tests.md  02-golden-master-testing.md  03-strangler-fig-pattern.md  04-feature-flags.md  05-testes-de-regressao.md
docs/testing/shift-left-legados/03-exercicios/: 01-exercicios-basico.md  02-exercicios-intermediario.md  03-exercicios-avancado.md
docs/testing/shift-left-legados/04-gabarito/: 01-gabarito-basico.md  02-gabarito-intermediario.md  03-gabarito-avancado.md
docs/testing/shift-left-legados/05-caso-pratico-cnpj/: cenario-migracao.md  checklist-go-live.md  implementacao-testes.md  plano-de-testes.md
docs/testing/shift-left-testing/: README.md
docs/testing/shift-left-testing/01-planejamento/: estrutura-pedagogica.md  plano-aprendizado.md
docs/testing/shift-left-testing/02-guia-teorico/: 01-introducao.md  02-fundamentacao-teorica.md  03-como-funciona.md  04-como-aplicar.md  05-lembrar-sempre.md  index.md
docs/testing/shift-left-testing/03-exercicios/: 00-introducao-metodologia.md  01-nivel-basico.md  (+3 more)
docs/training/: exercicios-praticos.md  plano-estudo-6-semanas.md  plano-estudo.md  shift-left-testing-exercicios-praticos.md  shift-left-testing-gabarito.md  shift-left-testing-guia-teorico.md
examples/: demo.py  demo_api_receita.py  quick-start.py
fabrica-de-testes/automation-scripts/: QA_CHECKLIST.md  README.md
reports/: test_report.html
scripts/: README.md  run-tests.bat  run-tests.sh
src/api/: __init__.py  main.py
src/cnpj_validator/: __init__.py  cli.py  cnpj_validator.py  receita_federal_api.py
src/cnpj_validator/validators/: __init__.py  alphanumeric_validator.py  new_alphanumeric_validator.py  numeric_validator.py
src/typescript/: README.md  jest.config.js  package.json  tsconfig.json
src/typescript/src/: index.ts
src/typescript/tests/: cnpj-validator.test.ts
test_hub/: README.md  app.py  requirements.txt  start.bat  start.sh
test_hub/config/: projects.json
test_hub/reports/: .gitkeep  latest_result.json  report_20251210_182739.json
test_hub/services/: __init__.py  report_generator.py  test_runner.py
test_hub/static/css/: styles.css
test_hub/static/js/: main.js
test_hub/templates/: index.html
tests/: __init__.py  test_alphanumeric_validator.py  test_cli.py  test_integration.py  test_integration_alphanumeric.py  test_new_alphanumeric_validator.py  test_numeric_validator.py  test_receita_federal_api.py
tests/mocks/: __init__.py  receita_federal_mock.py
(+19 files in other folders)
