[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cnpj-validator-br"
version = "2.0.0"
description = "Validador de CNPJ brasileiro com suporte ao formato alfanumérico 2026"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Rafael Feltrim", email = "rafael.feltrim@example.com"}
]
maintainers = [
    {name = "Rafael Feltrim", email = "rafael.feltrim@example.com"}
]
keywords = [
    "cnpj",
    "validator",
    "brazil",
    "brasil",
    "receita-federal",
    "alphanumeric",
    "validation",
    "qa",
    "testing"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Office/Business",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed"
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "pytest-html>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "isort>=5.0.0",
    "bandit>=1.7.0"
]
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0"
]
all = [
    "cnpj-validator-br[dev,api]"
]

[project.scripts]
cnpj-validator = "cnpj_validator.cli:main"
cnpj-validate = "cnpj_validator.cli:main"

[project.urls]
Homepage = "https://github.com/RaFeltrim/CNPJ-QA-Training"
Documentation = "https://github.com/RaFeltrim/CNPJ-QA-Training/tree/master/docs"
Repository = "https://github.com/RaFeltrim/CNPJ-QA-Training.git"
Issues = "https://github.com/RaFeltrim/CNPJ-QA-Training/issues"
Changelog = "https://github.com/RaFeltrim/CNPJ-QA-Training/blob/master/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["cnpj_validator*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
    | \.eggs
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "smoke: Smoke tests (< 1 min)",
    "sanity: Sanity tests (< 5 min)",
    "core: Core regression (< 30 min)",
    "full: Full regression (> 1 hora)",
    "golden: Golden Master tests",
    "performance: Performance tests"
]

[tool.coverage.run]
source = ["src/cnpj_validator"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]
fail_under = 80

[tool.bandit]
exclude_dirs = ["tests", "docs"]
skips = ["B101"]
